minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The Minio server's http port
  labels:
    app: minio
  name: minio
spec:
  ports:
  - name: 9000-tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
    deploymentconfig: minio
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
